force-app/main/default/objects/OI_Settings__mdt/OI_Settings__mdt.object-meta.xml
<CustomObject>
    <label>OI Settings</label>
    <pluralLabel>OI Settings</pluralLabel>
    <description>Org-wide configuration for the platform (DataModel.md §4.3). Read via OI_SettingsService — the org-default record (DeveloperName "Default") is the single source of truth in v1; per-profile/permission-set-group override is a documented future extension, not implemented this sprint.</description>
</CustomObject>