force-app/main/default/objects/OI_Settings__mdt/fields/Cache_TTL_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Cache_TTL_Minutes__c</fullName>
    <label>Cache TTL Minutes</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>L1 Platform Cache default TTL.</description>
</CustomField>