force-app/main/default/objects/OI_Settings__mdt/fields/Client_Cache_LRU_Size__c.field-meta.xml
<CustomField>
    <fullName>Client_Cache_LRU_Size__c</fullName>
    <label>Client Cache LRU Size</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>L3 client-session cache eviction bound.</description>
</CustomField>