force-app/main/default/objects/OI_Settings__mdt/fields/Daily_Api_Call_Budget__c.field-meta.xml
<CustomField>
    <fullName>Daily_Api_Call_Budget__c</fullName>
    <label>Daily Api Call Budget</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>