force-app/main/default/objects/OI_Settings__mdt/fields/Default_Scan_Schedule_Cron__c.field-meta.xml
<CustomField>
    <fullName>Default_Scan_Schedule_Cron__c</fullName>
    <label>Default Scan Schedule Cron</label>
    <type>Text</type>
    <length>64</length>
    <description>Optional; scans are opt-in, never auto-enabled on install.</description>
</CustomField>