force-app/main/default/objects/OI_Settings__mdt/fields/Default_Search_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Search_Page_Size__c</fullName>
    <label>Default Search Page Size</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Server-side clamp on caller-requested search pageSize. Reserved for the Search Engine sprint.</description>
</CustomField>