force-app/main/default/objects/OI_Settings__mdt/fields/Enable_Record_Search__c.field-meta.xml
<CustomField>
    <fullName>Enable_Record_Search__c</fullName>
    <label>Enable Record Search</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Master switch for the Record Search domain — off by default (ADR-0017). Reserved for the Search Engine sprint.</description>
</CustomField>