force-app/main/default/objects/OI_Settings__mdt/fields/Hierarchy_History_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_History_Retention_Days__c</fullName>
    <label>Hierarchy History Retention Days</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>