force-app/main/default/objects/OI_Settings__mdt/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>DEBUG</fullName><default>false</default><label>DEBUG</label></value>
            <value><fullName>INFO</fullName><default>false</default><label>INFO</label></value>
            <value><fullName>WARN</fullName><default>true</default><label>WARN</label></value>
            <value><fullName>ERROR</fullName><default>false</default><label>ERROR</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>