force-app/main/default/objects/OI_Settings__mdt/fields/Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Retention_Days__c</fullName>
    <label>Log Retention Days</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>