force-app/main/default/objects/OI_Settings__mdt/fields/Max_Canvas_Working_Set__c.field-meta.xml
<CustomField>
    <fullName>Max_Canvas_Working_Set__c</fullName>
    <label>Max Canvas Working Set</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Ceiling on cumulative nodes held in the client's GraphViewState across all expand actions (GraphUI.md §26-27). Reserved for the Graph UI sprint.</description>
</CustomField>