force-app/main/default/objects/OI_Settings__mdt/fields/Max_Hop_Depth__c.field-meta.xml
<CustomField>
    <fullName>Max_Hop_Depth__c</fullName>
    <label>Max Hop Depth</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Default/ceiling for ordinary UI graph expansion (browsing). Impact Analysis traversal uses its own dedicated Max_Impact_Depth__c instead, since it needs a different default (Architecture.md §7).</description>
</CustomField>