force-app/main/default/objects/OI_Settings__mdt/fields/Max_Impact_Traversal_Node_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Impact_Traversal_Node_Count__c</fullName>
    <label>Max Impact Traversal Node Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Node-count ceiling for Impact Analysis traversal — dedicated and tighter than Max_Traversal_Node_Count__c (ordinary UI browsing) because a reverse-impact walk on a widely-referenced hub node (e.g. a shared utility class) needs a stricter CPU/heap safety margin than a user paging through the graph one hop at a time.</description>
</CustomField>