force-app/main/default/objects/OI_Settings__mdt/fields/Max_Search_Results__c.field-meta.xml
<CustomField>
    <fullName>Max_Search_Results__c</fullName>
    <label>Max Search Results</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Total results returned across pagination for one logical search session before truncated=true. Reserved for the Search Engine sprint.</description>
</CustomField>