force-app/main/default/objects/OI_Settings__mdt/fields/Max_Traversal_Node_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_Traversal_Node_Count__c</fullName>
    <label>Max Traversal Node Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Ceiling on total nodes visited per traversal call, regardless of hop depth (GraphEngine.md §12).</description>
</CustomField>