force-app/main/default/objects/OI_Settings__mdt/fields/Min_Search_Query_Length__c.field-meta.xml
<CustomField>
    <fullName>Min_Search_Query_Length__c</fullName>
    <label>Min Search Query Length</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Below this, SOSL is skipped in favor of a SOQL prefix-match fallback (SearchEngine.md §7). Reserved for the Search Engine sprint.</description>
</CustomField>