force-app/main/default/objects/OI_Settings__mdt/fields/Repository_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Repository_Page_Size__c</fullName>
    <label>Repository Page Size</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Page size for OI_GraphRepository.getCurrentKeysByType's keyset pagination.</description>
</CustomField>