force-app/main/default/objects/OI_Settings__mdt/fields/Scan_Customized_Standard_Objects__c.field-meta.xml
<CustomField>
    <fullName>Scan_Customized_Standard_Objects__c</fullName>
    <label>Scan Customized Standard Objects</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description
  >When checked, the metadata scan includes any standard object that carries at least one custom field from this org, in addition to custom objects and the OI_Scan_Object_Scope__mdt core list (ADR-0031).</description>
</CustomField>