force-app/main/default/objects/OI_Settings__mdt/fields/Scan_Managed_Package_Objects__c.field-meta.xml
<CustomField>
    <fullName>Scan_Managed_Package_Objects__c</fullName>
    <label>Scan Managed Package Objects</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >When checked, the metadata scan also persists objects, fields, Apex classes, triggers and flows from installed managed packages (other namespaces). Off by default to keep graph storage small (ADR-0031).</description>
</CustomField>