force-app/main/default/objects/OI_Settings__mdt/fields/Scan_Standard_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Scan_Standard_Permission_Sets__c</fullName>
    <label>Scan Standard Permission Sets</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description
  >When checked, the metadata scan also persists Salesforce-supplied permission sets (license and feature sets the platform provisions) and their access grants. Off by default to keep graph storage small (ADR-0031).</description>
</CustomField>