force-app/main/default/objects/OI_Settings__mdt/fields/Storage_Migration_Mode__c.field-meta.xml
<CustomField>
    <fullName>Storage_Migration_Mode__c</fullName>
    <label>Storage Migration Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Off</fullName><default>true</default><label>Off</label></value>
            <value><fullName>DualWrite</fullName><default>false</default><label>Dual Write</label></value>
            <value><fullName>ReadNew</fullName><default>false</default><label>Read New</label></value>
            <value><fullName>NewOnly</fullName><default>false</default><label>New Only</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Gates the dual-write/verify/cutover/decommission storage migration pattern (GraphRepository.md §22). Not exercised in v1.</description>
</CustomField>